messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-app
      version: green
  template:
    metadata:
      labels:
        app: django-app
        version: green
    spec:
      containers:
      - name: django-app
        image: stevemg9/django-messaging-app:v2
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
spec:
  selector:
    app: django-app
    version: green
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
