messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
spec:
  selector:
    app: django-app
    version: blue  # Initially points to blue version
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
